# CS5330_Project2_ContentBasedImageRetrieval

./: CMakeLists.txt  readme.txt
include/: Task1.hpp  Task2.hpp
src/: Task1.cpp  Task2.cpp  main.cpp
